--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="h-full bg-gray-100">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon_x.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>MateXpress</title>
   </head>
   <body class="h-full">
     <div class="min-h-full" id="app"></div>
